--- a/Vitaminfo2/app/src/main/res/values/strings.xml
+++ b/Vitaminfo2/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Vitaminfo</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_food">foodActivity</string>
+    <string name="title_activity_food_info">foodInfoActivity</string>
 </resources>
