--- a/Vitaminfo2/app/src/main/res/values/strings.xml
+++ b/Vitaminfo2/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_food">foodActivity</string>
     <string name="title_activity_food_info">foodInfoActivity</string>
+    <string name="foodActivityTitle">Foods</string>
 </resources>
