Adding prototype but some intents are not set.

--- a/Vitaminfo2/app/src/main/res/values/strings.xml
+++ b/Vitaminfo2/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_food">foodActivity</string>
     <string name="title_activity_food_info">foodInfoActivity</string>
     <string name="foodActivityTitle">Foods</string>
+    <string name="title_activity_userinfo">userinfo</string>
 </resources>
