Completed the FoodInfoActivity to show the nutrition information on a new activity, FoodActivity

--- a/Vitaminfo2/app/src/main/res/values/strings.xml
+++ b/Vitaminfo2/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Vitaminfo</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_food">foodActivity</string>
-    <string name="title_activity_food_info">foodInfoActivity</string>
+    <string name="title_activity_food">Foods</string>
+    <string name="title_activity_food_info">Foods Nutrition Information</string>
     <string name="foodActivityTitle">Foods</string>
     <string name="title_activity_userinfo">userinfo</string>
 </resources>
